# myRos2Test

./: README.md
src/message_interfaces/: CMakeLists.txt  package.xml
src/message_interfaces/msg/: HandCtl.msg  HandState.msg  PointTemprInfo.msg
src/xjtech/: CMakeLists.txt  package.xml
src/xjtech/config/: a.yaml  config.yaml
src/xjtech/include/xjtech/: XJTech.h
src/xjtech/launch/: run.launch.py
src/xjtech/src/: MyLog.cpp  MyLog.h  XjtechRos2.cpp  XjtechRos2.hpp  xjtech_main.cpp
src/xjtech_py/: package.xml  setup.cfg  setup.py
src/xjtech_py/config/: config.yaml
src/xjtech_py/include/: XBaseDefine.h
src/xjtech_py/launch/: run.launch.py
src/xjtech_py/xjtech_py/: BaseData.py  test.ipynb  xjtech_demo.py  xjtech_py.py
